--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh-Hant">
   <head>
     <meta charset="UTF-8" />
-    <title>米寶寶 AI 鑑米師</title>
+    <title>米寶寶 AI 鑑米師 - Vision 分析版</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       body {
         margin: 0;
-        background-image: url('/rice-background.jpg');
+        font-family: sans-serif;
+        background-image: url('/bg.jpg');
         background-size: cover;
-        background-repeat: no-repeat;
         background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
       }
     </style>
   </head>
