--- a/index.html
+++ b/index.html
@@ -1,22 +1,11 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>米寶寶 AI 鑑米師 - Vision 分析版</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      body {
-        margin: 0;
-        font-family: sans-serif;
-        background-image: url('/bg.jpg');
-        background-size: cover;
-        background-attachment: fixed;
-        background-position: center;
-        background-repeat: no-repeat;
-      }
-    </style>
+    <title>稻米 AI 分析</title>
   </head>
-  <body>
+  <body style="margin: 0; background: url('/bg.jpg') center/cover no-repeat;">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
