🚀 初始上傳 rice-q-ai 專案含 GPT 函式

--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>稻米 AI 分析</title>
-  </head>
-  <body style="margin: 0; background: url('/bg.jpg') center/cover no-repeat;">
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
-</html>
+<!DOCTYPE html><html><head><title>稻米分析</title></head><body><div id='root'>✅ 專案載入成功</div></body></html>
