💡 完整上傳含分析與 PDF 專案

--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<!DOCTYPE html><html><head><title>稻米分析</title></head><body><div id='root'>✅ 專案載入成功</div></body></html>
+<!DOCTYPE html><html><head><title>稻米分析系統</title><meta charset="UTF-8" /></head>
+<body><div id="root"></div><script type="module" src="/src/main.tsx"></script></body></html>
