🚀 完整上傳稻米分析系統（含 GPT 分析與 PDF 報告）

--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-<!DOCTYPE html><html><head><title>稻米分析系統</title><meta charset="UTF-8" /></head>
-<body><div id="root"></div><script type="module" src="/src/main.tsx"></script></body></html>
+<!DOCTYPE html>
+<html lang="zh-TW">
+<head>
+  <meta charset="UTF-8" />
+  <title>稻米品質分析</title>
+</head>
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+</html>
