初始上傳：整合文字參數檔與首頁 UI

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
-  <title>稻米品質分析</title>
+  <title>米寶寶 AI 鑑米師</title>
 </head>
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
+<body style="margin:0;padding:0;font-family:sans-serif;background:#f8f8f8;">
+  <div id="root">請透過 React 專案載入此設定檔：src/config/text_config.json</div>
 </body>
 </html>
