--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
-<head>
-  <meta charset="UTF-8" />
-  <title>米寶寶 AI 鑑米師</title>
-</head>
-<body style="margin:0;padding:0;font-family:sans-serif;background:#f8f8f8;">
-  <div id="root">請透過 React 專案載入此設定檔：src/config/text_config.json</div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>米寶寶 AI 鑑米師</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
